<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="currency_symbol">$</string>
    <string name="tip_percent">Tip Percent</string>
    <string name="default_tip">15</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="calculate_btn">Calculate</string>
    <string name="default_amount">0.00</string>
    <string name="round_no">No Rounding</string>
    <string name="round_tip">Round Tip</string>
    <string name="round_total">Round Total</string>
    <string name="split_hint">Split The Bill</string>
    <string name="each_pays_hint">Each Pays</string>
    <string-array name="split_array">
        <item>No</item>
        <item>2 ways</item>
        <item>3 ways</item>
        <item>4 ways</item>
    </string-array>
</resources>